schemars/tests/ui/invalid_validation_attrs.stderr
error: expected validate regex attribute item to be of the form `regex(...)`
 --> tests/ui/invalid_validation_attrs.rs:5:31
  |
5 | pub struct Struct1(#[validate(regex, foo, length(min = 1, equal = 2, bar))] String);
  |                               ^^^^^

error: expected schemars regex attribute item to be of the form `regex(...)`
 --> tests/ui/invalid_validation_attrs.rs:9:31
  |
9 | pub struct Struct2(#[schemars(regex, foo, length(min = 1, equal = 2, bar))] String);
  |                               ^^^^^

error: schemars attribute cannot contain both `equal` and `min`
 --> tests/ui/invalid_validation_attrs.rs:9:59
  |
9 | pub struct Struct2(#[schemars(regex, foo, length(min = 1, equal = 2, bar))] String);
  |                                                           ^^^^^^^^^

error: unknown item in schemars length attribute: `bar`
 --> tests/ui/invalid_validation_attrs.rs:9:70
  |
9 | pub struct Struct2(#[schemars(regex, foo, length(min = 1, equal = 2, bar))] String);
  |                                                                      ^^^

error: unknown schemars attribute `foo`
 --> tests/ui/invalid_validation_attrs.rs:9:38
  |
9 | pub struct Struct2(#[schemars(regex, foo, length(min = 1, equal = 2, bar))] String);
  |                                      ^^^

error: unknown schemars attribute `email`
 --> tests/ui/invalid_validation_attrs.rs:8:12
  |
8 | #[schemars(email)]
  |            ^^^^^

error: expected validate regex attribute item to be of the form `regex(...)`
  --> tests/ui/invalid_validation_attrs.rs:14:9
   |
14 |         regex = "foo",
   |         ^^^^^^^^^^^^^

error: expected validate contains attribute item to be of the form `contains(...)`
  --> tests/ui/invalid_validation_attrs.rs:15:9
   |
15 |         contains = "bar",
   |         ^^^^^^^^^^^^^^^^

error: expected schemars regex attribute item to be of the form `regex(...)`
  --> tests/ui/invalid_validation_attrs.rs:27:9
   |
27 |         regex = "foo",
   |         ^^^^^^^^^^^^^

error: expected schemars contains attribute item to be of the form `contains(...)`
  --> tests/ui/invalid_validation_attrs.rs:28:9
   |
28 |         contains = "bar",
   |         ^^^^^^^^^^^^^^^^

error: schemars attribute cannot contain both `url` and `email`
  --> tests/ui/invalid_validation_attrs.rs:32:9
   |
32 |         url
   |         ^^^

error: unknown schemars attribute `phone`
  --> tests/ui/invalid_validation_attrs.rs:30:9
   |
30 |         phone,
   |         ^^^^^
